<resources>
    <string name="app_name">PSMaRT</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email*</string>
    <string name="prompt_password">Password*</string>
    <string name="action_sign_in">LOGIN</string>
    <string name="action_sign_in_short">Login</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Invalid email</string>
    <string name="invalid_password">Password must have at least 8 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reports">REPORTS</string>
    <string name="register_attendance">REGISTER ATTENDANCE</string>
    <string name="teacher">TEACHER</string>
    <string name="learner">LEARNER</string>
    <string name="register_new">REGISTER NEW DETAILS</string>
    <string-array name="select_class_sec">
        <item>S.1</item>
        <item>S.2</item>
        <item>S.3</item>
        <item>S.4</item>
    </string-array>
    <string-array name="select_class_pri">
        <item>P.1</item>
        <item>P.2</item>
        <item>P.3</item>
        <item>P.4</item>
        <item>P.5</item>
        <item>P.6</item>
        <item>P.7</item>
    </string-array>
</resources>