<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:background="@color/persian_green"
    >

    <ImageView
        android:id="@+id/menu"
        android:layout_width="79dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/reports"
        android:layout_width="166dp"
        android:layout_height="74dp"
        android:layout_marginTop="132dp"
        android:text="@string/reports"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu" />

    <TextView
        android:id="@+id/register_attendance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/register_attendance"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/reports"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="5dp" />

    <Button
        android:id="@+id/teacher"
        android:layout_width="166dp"
        android:layout_height="51dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="44dp"
        android:text="@string/teacher"
        android:textStyle="bold"
        android:backgroundTint="@color/persian_green"
        app:layout_constraintEnd_toStartOf="@+id/learner"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_attendance" />

    <Button
        android:id="@+id/learner"
        android:layout_width="166dp"
        android:layout_height="51dp"
        android:layout_marginTop="44dp"
        android:textStyle="bold"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/learner"
        android:backgroundTint="@color/persian_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_attendance" />

    <Button
        android:id="@+id/register_new"
        android:layout_width="283dp"
        android:layout_height="79dp"
        android:backgroundTint="@color/black"
        android:text="@string/register_new"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teacher"
        app:layout_constraintVertical_bias="0.264" />
</androidx.constraintlayout.widget.ConstraintLayout>